--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 <body>
-    Hello world
+    <p>Hello world</p>
 </body>
 </html>
