initial setup of html and css

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   
     </head>
     <body>
-        <div class="top-bar">
+        <main>
+        <header>
             <p><a>Image Search</a> | <a>Advanced Search</a></p>
-        </div>
+        </header>
         <div class="search">
             <h1>Google</h1>
             <form action="https://google.com/search" >
@@ -18,10 +19,12 @@
                 <input type="submit" value="Google Search" class="btn btn-primary">
             </form>
         </div>
-        <div class="bottom-bar">
+        
+        </main>
+        <footer>
             <p>Your Country</p>
             <hr>
             <p>About | Ads | Enterprise | How does search work?</p>
-        </div>
+        </footer>
     </body>
 </html>
