implemented search function to main page

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
             <p><a>Image Search</a> | <a>Advanced Search</a></p>
         </header>
         <div class="search">
-            <h1>Google</h1>
+            <h1><span style="color: blue;">G</span><span style="color: red;">o</span><span style="color: gold;">o</span><span style="color: blue;">g</span><span style="color: green;">l</span><span style="color: red;">e</span></h1>
             <form action="https://google.com/search" >
                 <input type="text" name="q" class="mb-3">
+                <br>
                 <input type="submit" value="Google Search" class="btn btn-primary">
             </form>
         </div>
