implemented i'm feeling lucky button

--- a/image-search.html
+++ b/image-search.html
@@ -10,14 +10,15 @@
     <body>
         <main>
         <header>
-            <p><a>Image Search</a> | <a>Advanced Search</a></p>
+            <p><a href="index.html">Search</a></p>
         </header>
         <div class="search">
-            <h1><span style="color: blue;">G</span><span style="color: red;">o</span><span style="color: gold;">o</span><span style="color: blue;">g</span><span style="color: green;">l</span><span style="color: red;">e</span></h1>
+            <h1 class="google"><span style="color: blue;">G</span><span style="color: red;">o</span><span style="color: gold;">o</span><span style="color: blue;">g</span><span style="color: green;">l</span><span style="color: red;">e</span></h1>
             <form action="https://google.com/search" >
-                <input type="text" name="q" class="mb-3">
+                <input type="text" name="q" class="form-control">
+                <input type="text" name="udm" value="2" hidden>
                 <br>
-                <input type="submit" value="Google Search" class="btn btn-primary">
+                <input type="submit" value="Image Search" class="btn btn-primary">
             </form>
         </div>
         
