--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         </header>
         <div class="search">
             <h1 class="google"><span style="color: blue;">G</span><span style="color: red;">o</span><span style="color: gold;">o</span><span style="color: blue;">g</span><span style="color: green;">l</span><span style="color: red;">e</span></h1>
+            
             <form action="https://google.com/search" >
                 <input type="text" name="q" class="form-control">
                 <br>
-                <input type="submit" value="Google Search" class="btn btn-primary">
+                <div>
+                    <input type="submit" name="btnk" value="Google Search" class="btn btn-primary">
+                    <input type="submit" name="btnI" value="I'm Feeling Lucky" class="btn btn-light">
+                </div>
             </form>
         </div>
         
